--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='[ "Designer Graphic","Web Designer.", "Developer.", "Photographer.", "Creator." ]'></span>
+								     data-rotate='[ "Graphic Designer","Web Designer.", "Developer.", "Photographer.", "Creator." ]'></span>
 								</h2>
 							</div>
             </div>
