--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 		    					<span class="date">2018-Sekarang</span>
 		    					<h2>Team Virtuous Dinus</h2>
 		    					<span class="position">Artis</span>
-									<p>Saya seorang desainer di studio game Darava, di sini saya bertanggung 
+									<p>Saya seorang desainer di Team Game Virtuous Dinus, di sini saya bertanggung 
 										jawab membuat desain Asset Games, Story Games, animasi karakter, 
 										dan poin utama yang terkait dengan desain termasuk Dokumen Desain Game.</p>
 		    					</div>
