--- a/index.html
+++ b/index.html
@@ -1014,7 +1014,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Contact Number</h3>
-		            <p><a href="tel://1234567920">+6281252647057</a></p>
+		            <p><a href="tel://+6281252647057">+6281252647057</a></p>
 	            </div>
 	          </div>
           </div>
