--- a/index.html
+++ b/index.html
@@ -361,6 +361,14 @@
                 <div class="text-center mt-4">
                     <a class="btn btn-xl btn-outline-light" href="https://ramayanabudaya.github.io/"><i class="fas fa-download mr-2"></i>Free Download!</a>
                 </div>
+                <div class="row">
+                    <div class="col-lg-8 ml-auto"><p class="lead">Game tower-blocks</p></div>
+                    <!--<div class="col-lg-4 mr-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>-->
+                </div>
+                <!-- About Section Button-->
+                <div class="text-center mt-4">
+                    <a class="btn btn-xl btn-outline-light" href="Permainan/towerblocks/dist/index.html"><i class="fas fa-download mr-2"></i>Langsung PLAY</a>
+                </div>
             </div>
         </section>
         <!-- Contact Section-->
