--- a/index.html
+++ b/index.html
@@ -396,14 +396,14 @@
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
                         <h4 class="text-uppercase mb-4">About Bos Cahya</h4>
-                        <p class="lead mb-0">puasdesign@gmail.com ,<br>+6281252647057 <a href="https://www.youtube.com/channel/UCa05zV4ZuV0u2Btr9j27mWQ">YouTube</a>.</p>
+                        <p class="lead mb-0">boscahya@gmail.com ,<br>+6281252647057<br> <a href="https://www.youtube.com/channel/UCa05zV4ZuV0u2Btr9j27mWQ">YouTube</a>.</p>
                     </div>
                 </div>
             </div>
         </footer>
         <!-- Copyright Section-->
         <section class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright © Your Website 2020</small></div>
+            <div class="container"><small>Copyright © Your Website 2020 </small></div>
         </section>
         <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
         <div class="scroll-to-top d-lg-none position-fixed">
