--- a/LocakhHackDay_share/index.html
+++ b/LocakhHackDay_share/index.html
@@ -1,5 +1,5 @@
-# wedding-for.github.io
-Tentang Pernikahan dan Kebahagiaan...
+# 
+Tentang Challenge Local Hack Day
 ### Table of contents
 
 |  No  |  Name  | Link  |
