--- a/LocalHackDay_share/index.html
+++ b/LocalHackDay_share/index.html
@@ -4,7 +4,7 @@ Tentang Challenge Local Hack Day
 
 |  No  |  Name  | Link  |
 |------|----------------|--------------|
-|  01  | Day |[C1](boscahya.github.io/LocalHackDay_share/gif_wanita.html)|	         
+|  01  | Day |[C1](gif_wanita.html)|	         
 |  02  | Day |[C1]()|
 |  03  | Day |[C1]()|	 
 |  04  | Day |[C1]()|	      
